# LabFoundry

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  design-qa.md  hyperv-admin-check.txt  hyperv-prereq-check.txt  index.html  pyproject.toml  requirements-appliance-bootstrap.in  requirements-release-tools.in
docs/: appliance-apply.md  appliance-console.md  appliance-update.md  automation.md  branding.md  ca-roadmap.md  dashboard.md  dns.md  esx-storage.md  hyperv-lifecycle-testing.md  ipxe.md  managed-ldap.md  monitor-apply-ux-design-qa.md  oidc-provider.md  routing-wan-roadmap.md  vcf-helper.md  vcf-trust.md  vmware-workstation-lifecycle-testing.md  web-terminal.md
labfoundry/: __init__.py
scripts/: build_release_bundle.py  build_update_wheel.py  check_appliance_lock.py  check_photon_compatibility.py  check_repo.py  generate_boot_branding.py  promote_release_channel.py  publish_release.py  version.py  write_wheelhouse_lock.py
tests/: conftest.py  test_appliance_console.py  test_appliance_helper.py  test_appliance_update.py  test_auth_api.py  test_automation.py  test_ca.py  test_dashboard.py  test_database_migrations.py  test_dns_dhcp.py  test_esx_storage.py  test_firewall.py  test_hyperv_image.py  test_ldap.py  test_lifecycle_test.py  test_monitoring.py  test_networking.py  test_oidc.py  test_openapi_contract.py  test_photon_image.py  test_public_services.py  test_release_updates.py  test_routes_wan.py  test_system_adapter.py  test_ui.py  test_vcf_depot_target.py  test_vcf_offline_depot.py  test_vcf_private_registry.py  test_version.py  (+4 more)
(+205 files in other folders)
