[project]
name = "labfoundry"
version = "0.1.0"
description = "LabFoundry Linux appliance web application MVP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "httpx>=0.27.2",
  "paramiko>=3.5.0",
  "pyjwt>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pykmip==0.10.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "vcf-sdk==9.1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "httpx2>=2.5.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["labfoundry"]
artifacts = [
  "labfoundry/app/static/**",
  "labfoundry/app/templates/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
